[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Controls.gd" type="Script" id=1]
[ext_resource path="res://assets/temp_tiles.png" type="Texture" id=2]
[ext_resource path="res://assets/visible.svg" type="Texture" id=3]
[ext_resource path="res://scenes/editor/NumEdit.tscn" type="PackedScene" id=4]

[node name="Controls" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
curr_file = "res://assets/temp_tiles.png"

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
margin_left = 50.0
margin_top = 50.0
margin_right = 974.0
margin_bottom = 580.0
rect_min_size = Vector2( 400, 140 )
window_title = "Open File(s)"
resizable = true
mode = 1
access = 2
filters = PoolStringArray( "*.png" )

[node name="AcceptDialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true
margin_right = 83.0
margin_bottom = 58.0
dialog_text = "Only *.png files are allowed"

[node name="H" type="HBoxContainer" parent="."]
anchor_bottom = 1.0
margin_right = 168.0
custom_constants/separation = 0

[node name="Controls" type="MarginContainer" parent="H"]
unique_name_in_owner = true
margin_right = 168.0
margin_bottom = 510.0
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="H/Controls"]
margin_right = 168.0
margin_bottom = 510.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.243137, 0.231373, 0.27451, 1 )

[node name="M" type="MarginContainer" parent="H/Controls"]
margin_right = 168.0
margin_bottom = 510.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="V" type="VBoxContainer" parent="H/Controls/M"]
margin_left = 10.0
margin_top = 10.0
margin_right = 158.0
margin_bottom = 500.0
mouse_filter = 2
custom_constants/separation = 10

[node name="ChangeFile" type="VBoxContainer" parent="H/Controls/M/V"]
margin_right = 148.0
margin_bottom = 38.0

[node name="CurrentFile" type="Label" parent="H/Controls/M/V/ChangeFile"]
unique_name_in_owner = true
margin_right = 148.0
margin_bottom = 14.0
text = "temp_tiles.png"
align = 1
autowrap = true

[node name="ChangeFile" type="Button" parent="H/Controls/M/V/ChangeFile"]
margin_top = 18.0
margin_right = 148.0
margin_bottom = 38.0
text = "Change File"

[node name="S2" type="HSeparator" parent="H/Controls/M/V"]
margin_top = 48.0
margin_right = 148.0
margin_bottom = 48.0
mouse_filter = 2
custom_constants/separation = 0

[node name="OnTop" type="VBoxContainer" parent="H/Controls/M/V"]
margin_top = 58.0
margin_right = 148.0
margin_bottom = 82.0

[node name="H" type="HBoxContainer" parent="H/Controls/M/V/OnTop"]
margin_right = 148.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="H/Controls/M/V/OnTop/H"]
margin_top = 5.0
margin_right = 120.0
margin_bottom = 19.0
size_flags_horizontal = 3
text = "Window on Top"
autowrap = true

[node name="WindowOnTop" type="CheckBox" parent="H/Controls/M/V/OnTop/H"]
margin_left = 124.0
margin_right = 148.0
margin_bottom = 24.0

[node name="S4" type="HSeparator" parent="H/Controls/M/V"]
margin_top = 92.0
margin_right = 148.0
margin_bottom = 92.0
mouse_filter = 2
custom_constants/separation = 0

[node name="CellSize" type="VBoxContainer" parent="H/Controls/M/V"]
margin_top = 102.0
margin_right = 148.0
margin_bottom = 152.0

[node name="Label" type="Label" parent="H/Controls/M/V/CellSize"]
margin_right = 148.0
margin_bottom = 14.0
text = "Cell Size"

[node name="H" type="HBoxContainer" parent="H/Controls/M/V/CellSize"]
margin_top = 18.0
margin_right = 148.0
margin_bottom = 50.0

[node name="X" parent="H/Controls/M/V/CellSize/H" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 72.0
margin_bottom = 32.0

[node name="Y" parent="H/Controls/M/V/CellSize/H" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 76.0
margin_right = 148.0
margin_bottom = 32.0

[node name="S5" type="HSeparator" parent="H/Controls/M/V"]
margin_top = 162.0
margin_right = 148.0
margin_bottom = 162.0
mouse_filter = 2
custom_constants/separation = 0

[node name="SubtileSize" type="VBoxContainer" parent="H/Controls/M/V"]
margin_top = 172.0
margin_right = 148.0
margin_bottom = 222.0

[node name="Label" type="Label" parent="H/Controls/M/V/SubtileSize"]
margin_right = 148.0
margin_bottom = 14.0
text = "Subtile Size"

[node name="H" type="HBoxContainer" parent="H/Controls/M/V/SubtileSize"]
margin_top = 18.0
margin_right = 148.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( -74, 58 )

[node name="X" parent="H/Controls/M/V/SubtileSize/H" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 72.0
margin_bottom = 32.0

[node name="Y" parent="H/Controls/M/V/SubtileSize/H" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 76.0
margin_right = 148.0
margin_bottom = 32.0

[node name="S6" type="HSeparator" parent="H/Controls/M/V"]
margin_top = 232.0
margin_right = 148.0
margin_bottom = 232.0
mouse_filter = 2
custom_constants/separation = 0

[node name="DisplayGrid" type="VBoxContainer" parent="H/Controls/M/V"]
margin_top = 242.0
margin_right = 148.0
margin_bottom = 294.0

[node name="V" type="VBoxContainer" parent="H/Controls/M/V/DisplayGrid"]
margin_right = 148.0
margin_bottom = 24.0

[node name="H" type="HBoxContainer" parent="H/Controls/M/V/DisplayGrid/V"]
margin_right = 148.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="H/Controls/M/V/DisplayGrid/V/H"]
margin_top = 5.0
margin_right = 94.0
margin_bottom = 19.0
text = "Grid on Mouse"

[node name="MouseGrid" type="CheckBox" parent="H/Controls/M/V/DisplayGrid/V/H"]
margin_left = 124.0
margin_right = 148.0
margin_bottom = 24.0
size_flags_horizontal = 10
pressed = true

[node name="MouseStrength" type="HSlider" parent="H/Controls/M/V/DisplayGrid/V"]
visible = false
margin_top = 28.0
margin_right = 148.0
margin_bottom = 44.0
max_value = 1.4
step = 0.1
value = 0.7
tick_count = 5

[node name="V2" type="VBoxContainer" parent="H/Controls/M/V/DisplayGrid"]
margin_top = 28.0
margin_right = 148.0
margin_bottom = 52.0

[node name="H2" type="HBoxContainer" parent="H/Controls/M/V/DisplayGrid/V2"]
margin_right = 148.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="H/Controls/M/V/DisplayGrid/V2/H2"]
margin_top = 5.0
margin_right = 81.0
margin_bottom = 19.0
text = "Grid on Tiles"

[node name="TilesGrid" type="CheckBox" parent="H/Controls/M/V/DisplayGrid/V2/H2"]
margin_left = 124.0
margin_right = 148.0
margin_bottom = 24.0
size_flags_horizontal = 10
pressed = true

[node name="TilesStrength" type="HSlider" parent="H/Controls/M/V/DisplayGrid/V2"]
visible = false
margin_top = 28.0
margin_right = 148.0
margin_bottom = 44.0
max_value = 1.4
step = 0.1
value = 0.7
tick_count = 5

[node name="S3" type="HSeparator" parent="H/Controls/M/V"]
margin_top = 304.0
margin_right = 148.0
margin_bottom = 304.0
mouse_filter = 2
custom_constants/separation = 0

[node name="Presets" type="VBoxContainer" parent="H/Controls/M/V"]
margin_top = 314.0
margin_right = 148.0
margin_bottom = 352.0

[node name="Label" type="Label" parent="H/Controls/M/V/Presets"]
margin_right = 148.0
margin_bottom = 14.0
text = "Load Examples"
align = 1

[node name="H" type="HBoxContainer" parent="H/Controls/M/V/Presets"]
margin_top = 18.0
margin_right = 148.0
margin_bottom = 38.0

[node name="Temp" type="Button" parent="H/Controls/M/V/Presets/H"]
margin_right = 48.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Temp"

[node name="Thick" type="Button" parent="H/Controls/M/V/Presets/H"]
margin_left = 52.0
margin_right = 98.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Thick"

[node name="Anim" type="Button" parent="H/Controls/M/V/Presets/H"]
margin_left = 102.0
margin_right = 148.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Anim"

[node name="S8" type="HSeparator" parent="H/Controls/M/V"]
margin_top = 362.0
margin_right = 148.0
margin_bottom = 362.0
mouse_filter = 2
custom_constants/separation = 0

[node name="Download" type="VBoxContainer" parent="H/Controls/M/V"]
margin_top = 372.0
margin_right = 148.0
margin_bottom = 410.0

[node name="Label" type="Label" parent="H/Controls/M/V/Download"]
margin_right = 148.0
margin_bottom = 14.0
text = "Download Examples"
align = 1

[node name="H" type="HBoxContainer" parent="H/Controls/M/V/Download"]
margin_top = 18.0
margin_right = 148.0
margin_bottom = 38.0

[node name="Temp" type="Button" parent="H/Controls/M/V/Download/H"]
margin_right = 48.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Temp"

[node name="Thick" type="Button" parent="H/Controls/M/V/Download/H"]
margin_left = 52.0
margin_right = 98.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Thick"

[node name="Anim" type="Button" parent="H/Controls/M/V/Download/H"]
margin_left = 102.0
margin_right = 148.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Anim"

[node name="S7" type="HSeparator" parent="H/Controls/M/V"]
margin_top = 420.0
margin_right = 148.0
margin_bottom = 420.0
mouse_filter = 2
custom_constants/separation = 0

[node name="FPS" type="HBoxContainer" parent="H/Controls/M/V"]
unique_name_in_owner = true
visible = false
margin_top = 430.0
margin_right = 148.0
margin_bottom = 462.0

[node name="Label" type="Label" parent="H/Controls/M/V/FPS"]
margin_top = 9.0
margin_right = 22.0
margin_bottom = 23.0
text = "FPS"

[node name="FPS" parent="H/Controls/M/V/FPS" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 76.0
margin_right = 148.0
margin_bottom = 32.0
size_flags_horizontal = 10
start_num = 10

[node name="ToggleVisibility" type="Button" parent="H"]
unique_name_in_owner = true
show_behind_parent = true
margin_left = 168.0
margin_right = 196.0
margin_bottom = 22.0
size_flags_vertical = 0
icon = ExtResource( 3 )

[node name="GetModifiedTime" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="M2" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )

[node name="TilesTexture" type="TextureRect" parent="M2"]
unique_name_in_owner = true
margin_right = 200.0
margin_bottom = 200.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
[connection signal="files_selected" from="FileDialog" to="." method="_on_FileDialog_files_selected"]
[connection signal="pressed" from="H/Controls/M/V/ChangeFile/ChangeFile" to="." method="_on_ChangeFile_pressed"]
[connection signal="toggled" from="H/Controls/M/V/OnTop/H/WindowOnTop" to="." method="_on_WindowOnTop_toggled"]
[connection signal="number_changed" from="H/Controls/M/V/CellSize/H/X" to="." method="_on_CellSizeX_number_changed"]
[connection signal="number_changed" from="H/Controls/M/V/CellSize/H/Y" to="." method="_on_CellSizeY_number_changed"]
[connection signal="number_changed" from="H/Controls/M/V/SubtileSize/H/X" to="." method="_on_SubtileSizeX_number_changed"]
[connection signal="number_changed" from="H/Controls/M/V/SubtileSize/H/Y" to="." method="_on_SubtileSizeY_number_changed"]
[connection signal="toggled" from="H/Controls/M/V/DisplayGrid/V/H/MouseGrid" to="." method="_on_MouseGrid_toggled"]
[connection signal="value_changed" from="H/Controls/M/V/DisplayGrid/V/MouseStrength" to="." method="_on_MouseStrength_value_changed"]
[connection signal="toggled" from="H/Controls/M/V/DisplayGrid/V2/H2/TilesGrid" to="." method="_on_TilesGrid_toggled"]
[connection signal="value_changed" from="H/Controls/M/V/DisplayGrid/V2/TilesStrength" to="." method="_on_TilesStrength_value_changed"]
[connection signal="pressed" from="H/Controls/M/V/Presets/H/Temp" to="." method="_on_Temp_pressed"]
[connection signal="pressed" from="H/Controls/M/V/Presets/H/Thick" to="." method="_on_Thick_pressed"]
[connection signal="pressed" from="H/Controls/M/V/Presets/H/Anim" to="." method="_on_Anim_pressed"]
[connection signal="pressed" from="H/Controls/M/V/Download/H/Temp" to="." method="_on_Temp_pressed"]
[connection signal="pressed" from="H/Controls/M/V/Download/H/Thick" to="." method="_on_Thick_pressed"]
[connection signal="pressed" from="H/Controls/M/V/Download/H/Anim" to="." method="_on_Anim_pressed"]
[connection signal="number_changed" from="H/Controls/M/V/FPS/FPS" to="." method="_on_FPS_number_changed"]
[connection signal="pressed" from="H/ToggleVisibility" to="." method="_on_ToggleVisibility_pressed"]
[connection signal="timeout" from="GetModifiedTime" to="." method="_on_GetModifiedTime_timeout"]
